TEST_PROGRAMS/INVALID/prabhjot_sandhu/wrongstring.min
var s: string;

s = "Is it just 20.5? yes, it is so cool!\n";

